# proto0

./: .env  .gitignore  CITATION.cff  Dockerfile  Dockerfile.22.04  Dockerfile.org  Makefile  README.md  docker-compose.yml
doc/: OpenCV.md  Tensorflow.md  VTK.md  YARP.md  yarpmanager.xml
workdir/: README.md  go  init.sh
workdir/app/: icub-gazebo.xml
workdir/applications/: 01-icub-gazebo.xml  02-logpolar.xml  03-SFM.xml  04-segmentation.xml  05-imageProcessing.xml
workdir/icub-gazebo/: CMakeLists.txt
workdir/icub-gazebo/gazebo/models/bekkering/: model.config  model.sdf
workdir/icub-gazebo/gazebo/models/bekkering/meshes/: bekkering_small_v1.dae  bekkering_v1.dae
workdir/icub-gazebo/gazebo/worlds/: icub-gazebo-grasping-sandbox.sdf
workdir/system1/: CMakeLists.txt  README.md
workdir/system1/scripts/: CMakeLists.txt  icub-system1-nocon.xml  icub-system1.xml  scenario1.xml  scenario2.xml
workdir/system1/src/: CMakeLists.txt  README.md  main.cpp  rpc.thrift
workdir/system1/src/csv_logger/: README.md  main.cpp
workdir/system1/src/gazebo_teleporter/: CMakeLists.txt  README.md
workdir/system1/src/imageProcessingEdge/: CMakeLists.txt
workdir/system1/src/imageProcessingEdge/include/iCub/: imageProcessingThread.h
workdir/system1/src/image_blob/: main.cpp  rpc.thrift
workdir/system1/src/image_colors/: README.md  main.cpp  rpc.thrift
workdir/system1/src/image_colors_gpu/: README.md  main.cpp  rpc.thrift
workdir/system1/src/image_edges/: README.md
workdir/system1/src/image_edges/include/iCub/: imageProcessing.h
workdir/system1/src/image_edges/src/: imageProcessing.cpp  main.cpp
workdir/system1/src/image_forward/: README.md  main.cpp  rpc.thrift
workdir/system1/src/logpolar/: CMakeLists.txt
workdir/system1/src/logpolar/modules/logpolarRemapper/src/: logpolarRemapper.cpp
workdir/system1/src/logpolar/modules/logpolarTransform/src/: logPolarTransform.cpp
workdir/system1/src/micro_actions/: README.md  main.cpp  rpc.thrift
workdir/system1/src/micro_gaze/: main.cpp
workdir/system1/src/micro_grasp/: main.cpp  rpc.thrift
workdir/system1/src/micro_orientation/: README.md  main.cpp
workdir/system1/src/micro_robot_reset/: README.md  cardinal_points_grasp.h  main.cpp  rpc.thrift
workdir/system1/src/micro_segment/: main.cpp
workdir/templates/applications/: 04-segmentation.xml  06-icub-grasp-sandbox.xml  07-icub-grasp-sandbox-console.xml
workdir/templates/blank/: main.cpp
workdir/templates/image-to-image/: main.cpp  rpc.thrift
workdir/templates/imageProcessingTemplate/: CMakeLists.txt  README.md
workdir/templates/imageProcessingTemplate/src/: imageProcessingThread.cpp
workdir/tests/: CMakeLists.txt  README.md
workdir/tests/scripts/: CMakeLists.txt  icub-tests.xml
workdir/tests/src/: CMakeLists.txt
workdir/tests/src/cartesian1/: CMakeLists.txt
workdir/tests/src/image-to-image/: CMakeLists.txt
workdir/tests/src/imageProcessing/: CMakeLists.txt  README.md
workdir/tests/src/imageProcessing/include/iCub/: imageProcessingThread.h
workdir/tests/src/imageProcessing/src/: imageProcessing.cpp  imageProcessingThread.cpp
workdir/tests/src/micro_gaze/: README.md  main.cpp  rpc.thrift
workdir/tests/src/micro_grasp/: CMakeLists.txt  README.md  main.cpp
workdir/tests/src/micro_pointcloud_viewer/: CMakeLists.txt  README.md  main.cpp  viewer.h
workdir/tests/src/micro_segment/: CMakeLists.txt  README.md  main.cpp
workdir/tests/src/reaching/: CMakeLists.txt  main.cpp
