cmake_minimum_required(VERSION 3.12)

#add_subdirectory(stereo-vision)

# from robotology/segmentation
# add_subdirectory(blobExtractor)
# add_subdirectory(dispBlobber)
# add_subdirectory(edison)
# add_subdirectory(graphBased)
# add_subdirectory(lbpExtract)
# add_subdirectory(lumaChroma)
# add_subdirectory(seg2cloud)
# add_subdirectory(segmentation)

# Compiles, but broken on connect
# from robotology/logpolar
# add_subdirectory(logpolar)

# BROKEN
# from robotology/himrep
# add_subdirectory(caffeCoder)

add_subdirectory(imageProcessingEdge)