cmake_minimum_required(VERSION 3.12)

# add_subdirectory(cartesian1)
# add_subdirectory(reaching) # BROKEN
# add_subdirectory(imageProcessing)
# add_subdirectory(grasping)

# add_subdirectory(micro_grasp)
# add_subdirectory(micro_gaze)
# add_subdirectory(micro_segment)
add_subdirectory(micro_pointcloud_viewer)
# add_subdirectory(micro_orientation)

# add_subdirectory(micro_point)

add_subdirectory( image-to-image )
